--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,248 @@
-h1{
-    color: red;
-    text-align: center;
-    
+@font-face {
+    font-family: "JF Flat Regular";
+    src: url(../fonts/JF-Flat-regular.eot), url(../fonts/JF-Flat-regular.eot?#iefix) format("embedded-opentype"), url("../fonts/JF-Flat-regular.svg# JF Flat Regular") format("svg"), url(../fonts/JF-Flat-regular.woff) format("woff"), url(../fonts/JF-Flat-regular.ttf) format("truetype");
+    font-weight: bold;
+    font-style: normal;
+}
+
+body {
+    font-family: "JF Flat Regular", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    color: #555555;
+    line-height: 1.429;
+    text-align: right !important;
+}
+
+.custom-navbar {
+    border-bottom: 3px solid #eef0ea;
+    width: 100%;
+    background-color: #fff;
+    padding-top: 15px;
+    padding-bottom: 15px
+}
+
+.custom-navbar .container .navbar-brand {
+    margin-left: 30px;
+    margin-top: 4px;
+}
+
+.custom-navbar .container {
+    padding: 0px;
+}
+
+.custom-form-control, .custom-btn {
+    border: 1px solid #ebebee;
+    box-shadow: none;
+    border-radius: 2px;
+    font-size: 14px;
+    transition: all 0.3s ease;
+    padding: 6px 16px 7px 16px;
+    color: #868686;
+}
+
+.custom-form-control:focus {
+    border-color: #c2101e;
+    box-shadow: 0 0 2px #c2101e;
+}
+
+.custom-btn:hover {
+    background-color: #d4d4d4;
+    border: 1px solid #8c8c8c;
+    color: #b86d07;
+}
+
+.categories .custom-btn {
+    border-right: 0;
+    border-radius: 0;
+}
+
+.dropdown-menu {
+    text-align: right !important;
+}
+
+.custom-dropdown-menu .checkbox {
+    display: inline-block;
+    margin: 0px 5px;
+}
+
+.custom-dropdown-menu {
+    border-radius: 2px;
+    box-shadow: 0 2px 5px 0 #EBEBEB;
+    color: #777;
+}
+
+.custom-dropdown-menu .checkbox label input {
+    margin-left: 5px;
+}
+
+.custom-navbar .search-btn {
+    color: #fff;
+    background-color: #ff3956;
+    border-color: #ff3956;
+    padding: 5px 15px 7px;
+    font-size: 14px;
+    font-weight: 700;
+    border-radius: 0;
+}
+
+.custom-navbar .search-btn:hover, .custom-navbar .search-btn:active, .custom-navbar .search-btn:focus, .custom-navbar .search-btn:active:focus, .custom-navbar .search-btn:active:hover {
+    background-color: #c2101e;
+    border-color: #c2101e;
+    color: #ffffff;
+}
+
+.custom-navbar .navbar-nav li a.nav-link {
+    color: #555555;
+    font-size: 14px;
+    padding: 15px;
+}
+
+.custom-navbar .navbar-nav li a.nav-link:hover {
+    color: #000;
+}
+
+.custom-navbar .navbar-nav li.active a.nav-link {
+    color: #ff3956;
+    font-weight: 700;
+    border-bottom: 1px solid #ff3956;
+}
+
+.custom-navbar .navbar-nav li.active:hover a.nav-link {
+    background-color: #e7e7e7;
+}
+
+.nav-item.dropdown .dropdown-menu {
+    left: auto;
+}
+
+.custom-dropdown-menu li a:hover {
+    background-color: #ffe7ea;
+}
+
+.custom-navbar a.btn-icon {
+    padding: 5px 10px 4px;
+    color: #777;
+    border: 1ox solid #ddd;
+    background-color: transparent;
+    border-radius: 2px;
+    margin-left: 10px;
+    margin-right: 15px;
+    font-size: 12px;
+}
+
+.custom-navbar .navbar-nav li:last-of-type {
+    margin-top: 8px;
+}
+
+.custom-navbar a.btn-icon:hover {
+    color: #000000;
+    background-color: #bfbfbf;
+}
+
+#carousel-featured {
+    background-color: #f7f8f3;
+    height: 400px;
+    padding-top: 25px;
+}
+
+.carousel-row .col-12 {
+    padding-right: 0;
+    padding-left: 0;
+}
+
+#carousel-featured .carousel-item img {
+    height: 375px;
+    margin-right: 0;
+    margin-left: 0;
+}
+
+.carousel-item {
+    margin-left: 0px;
+}
+
+#carousel-featured .product-details {
+    padding: 20px;
+    position: relative;
+    top: 50px;
+    border: 1px solid #dddddb;
+    height: 200px;
+}
+
+#carousel-featured .product-details .product-category {
+    border: 1px solid #dddddb;
+    padding: 10px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    background-color: #f7f8f3;
+}
+
+#carousel-featured .product-details .custom-btn-primary {
+    border-color: #f8ad47;
+    color: #f8ad47;
+    background-color: transparent;
+    padding: 9px 25px;
+    margin-top: 15px;
+    font-size: 18px;
+    border-radius: 2px;
+}
+
+.sale {
+    color: white;
+    background-color: #53ccd7;
+    font-weight: bold;
+    position: absolute;
+}
+
+.sale.large {
+    height: 60px;
+    width: 60px;
+    border-radius: 50%;
+    top: -15px;
+    left: -15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: rotate(-25deg);
+    padding: 35px;
+    font-size: 130%;
+    line-height: 90%;
+    flex-direction: column;
+}
+
+.sale.large span {
+    font-size: 14px;
+}
+
+#carousel-featured .product-details h1 {
+    font-size: 175%;
+    font-weight: 700;
+    color: #000000;
+    padding-top: 18px;
+}
+
+.custom-carousel-indicators-primary {
+    top: 235px;
+    right: 41%;
+}
+
+.custom-carousel-indicators-primary img {
+    height: 75px;
+    width: 75px;
+    background-color: #fff;
+    border: 2px solid #dddddb;
+    margin-right: 2px;
+}
+
+.custom-carousel-indicators-primary img.active {
+    border-color: #f8ad47;
+}
+
+#carousel-featured .carousel-control-prev, #carousel-featured .carousel-control-next {
+    color: #868686;
+    font-size: 20px;
+}
+
+#carousel-featured .carousel-control-next {
+    float: right !important;
 }
