--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,10 @@
 @font-face {
     font-family: "JF Flat Regular";
-    src: url(../fonts/JF-Flat-regular.eot), url(../fonts/JF-Flat-regular.eot?#iefix) format("embedded-opentype"), url("../fonts/JF-Flat-regular.svg# JF Flat Regular") format("svg"), url(../fonts/JF-Flat-regular.woff) format("woff"), url(../fonts/JF-Flat-regular.ttf) format("truetype");
+    src: url(../fonts/JF-Flat-regular.eot);
+    src:url(../fonts/JF-Flat-regular.eot?#iefix) format("embedded-opentype");
+    src:url("../fonts/JF-Flat-regular.svg# JF Flat Regular") format("svg");
+    src:url(../fonts/JF-Flat-regular.woff) format("woff");
+    src:url(../fonts/JF-Flat-regular.ttf) format("truetype");
     font-weight: bold;
     font-style: normal;
 }
@@ -145,7 +149,7 @@ body {
     padding-top: 25px;
 }
 
-.carousel-row .col-12 {
+.carousel-row>.col-12 {
     padding-right: 0;
     padding-left: 0;
 }
@@ -244,5 +248,115 @@ body {
 }
 
 #carousel-featured .carousel-control-next {
-    float: right !important;
+    right: unset !important;
+}
+#store-features{
+    box-shadow: 0 0 15px #eef0ea;
+    position: relative;
+    top: -30px;
+    background-image: url(../images/bg_features.png);
+    background-repeat: no-repeat;
+    background-color: #fff;
+    padding-bottom: 35px;
+    padding-top: 25px;
+    background-size: auto 60%;
+    background-position: -10px -20px;
+}
+#store-features .feature>img{
+    height: 40px;
+    margin-bottom: 10px;
+}
+#store-features .feature+.feature{
+    border-right: 1px solid #eef0ea;
+}
+h3.custom-heading{
+font-size: 24px;
+margin-bottom: 25px;
+color: #000;
+font-weight: bold;
+}
+.custom-thumbnail{
+    padding: 8px;
+    border:2px solid #eef0ea ;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition: all 0.5s ease;
+}
+.custom-thumbnail:hover{
+    border-color: #53ccd7;
+}
+.custom-thumbnail h4{
+    font-size: 18px;
+    padding-top: 10px;
+}
+.custom-thumbnail .card-body{
+    padding: 9px;
+}
+.custom-thumbnail .price{
+    padding-top: 10px;
+}
+.price{
+    color: #53ccd7;
+}
+.rating{
+    color: #c2c2c2;
+}
+.rating .active{
+    color: #f3af41;
+}
+.custom-thumbnail .overlay{
+    position: absolute;
+    background-color: rgba(83, 204, 215, .5);
+    height: 250px;
+    width: calc(100% - 16px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.3s ease;
+}
+.overlay:hover{
+    opacity: 1;
+}
+.custom-thumbnail .add-to-card-btn{
+    background-color: #fff;
+    color: #19becd;
+    font-weight: 700;
+}
+.custom-thumbnail .add-to-card-btn:active,
+.custom-thumbnail .add-to-card-btn:hover,
+.custom-thumbnail .add-to-card-btn:focus,
+.custom-thumbnail .add-to-card-btn:active:focus,
+.custom-thumbnail .add-to-card-btn:active:hover{
+    color: #000;
+    font-weight: 700;
+}
+.custom-thumbnail .sale{
+    padding:5px 10px;
+    position: absolute;
+    left: 16px;
+    top: 14px;
+    direction: ltr;
+}
+.custom-thumbnail .sale::before{
+    content: "-";
+}
+.custom-carousel-indicator>li{
+width: 13px;
+height: 13px;
+margin: 2px;
+background-color: #dbdbdb;
+}
+.custom-carousel-indicator>li.active{
+    background-color: #565656;
+}
+#carousel-most-sold .carousel-indicators {
+    position: static;
+}
+.custom-thumbnail img{
+    height: 250px;
+    width: 100%;
+    max-width: 250px;
+    margin: 0 auto;
+    display: block;
 }
