--- a/src/css/style.css
+++ b/src/css/style.css
@@ -360,3 +360,58 @@ background-color: #dbdbdb;
     margin: 0 auto;
     display: block;
 }
+.custom-panel{
+    padding: 20px;
+    border: 4px solid #eef0ea;
+    box-shadow: none;
+    border-radius: 2px;
+}
+.custom-panel .product-image{
+    width: 100%;
+    margin-bottom: 8px;
+}
+.custom-btn-primary{
+    color: #f8ad47;
+    border-color: #f8ad47;
+    background-color: transparent;
+}
+.custom-btn-primary:hover,
+.custom-btn-primary:focus,
+.custom-btn-primary:active,
+.custom-btn-primary:active:focus,
+.custom-btn-primary:active:hover{
+    color: #b86a07;
+    border-color: #b86a07;
+    background-color: transparent;
+}
+.custom-panel h4 ,.custom-panel .price{
+    font-size: 130%;
+    margin-top: 0;
+    margin-bottom: 15px;
+    font-weight: bold;
+}
+.custom-text-muted{
+    color: #a9a9a9;
+}
+.custom-arrow-btn{
+    background-color: #fff;
+    color: #868686;
+    border: 1px solid #EBEBEB;
+    box-shadow: none;
+    border-radius: 2px;
+    padding: 5px 10px;
+    font-size: 12px;
+}
+.brand-product{
+    margin-bottom: 20px;
+}
+.barnd-text{
+    display: inline-block;
+}
+.brand-product .brand-nav{
+    margin-top: 14px;
+}
+#row-brands h3.custom-heading{
+    border-top:1px solid #eef0ea;
+    padding-top: 25px;
+}
