--- a/src/css/style.css
+++ b/src/css/style.css
@@ -415,3 +415,224 @@ background-color: #dbdbdb;
     border-top:1px solid #eef0ea;
     padding-top: 25px;
 }
+#brand-logos{
+background-color: #dbeefa;
+padding: 25px 0;
+width: 100%;
+color: #555555;
+}
+#brand-logos img{
+    margin-left: 25px;
+    margin-right: 25px;
+    max-width: 100px;
+    max-height: 100px;
+}
+#footer-nav{
+    background-color: #1f1e1e;
+    padding: 50px 0 40px;
+    background-image: url(../images/bg_footer_1.png), url(../images/bg_footer_2.png);
+    background-repeat: no-repeat no-repeat;
+    background-position: 110%,0,-10%,-150%;
+}
+#footer-nav-links{
+    margin: 30px 0;
+    
+}
+#footer-nav-links a{
+    color: #555555;
+    margin-left: 30px;
+    font-weight: bold;
+    text-decoration: none;
+   
+}
+#footer-nav #newsletter{
+    border-top: 1px solid #292929;
+}
+#footer-nav form{
+    max-width: 260px;
+    margin: auto;
+}
+input[type=email]{
+    direction: rtl;
+    text-align: right;
+}
+#footer-nav form label{
+    margin: 27px 0 16px;
+    font-size: 12px;
+    font-weight: bold;
+    color: #555555;
+}
+.custom-btn-primary2{
+    color: #000;
+    background-color: #f8ad47;
+    border-color: #f8ad47;
+}
+.custom-btn-primary2:hover,
+.custom-btn-primary2:focus,
+.custom-btn-primary2:active,
+.custom-btn-primary2:active:focus,
+.custom-btn-primary2:active:hover{
+    color: #000;
+    border-color: #b86a07;
+    background-color: #b86a07;
+}
+#newsletter form input{
+    background-color: #313131;
+    opacity: .6;
+    height: 43px;
+    border: none;
+}
+#newsletter form button{
+    border-radius: 0px;
+    border-top-left-radius:3px ;
+    border-bottom-left-radius:3px ;
+    padding: 5px 12px 5px;
+    font-size: 14px;
+    color: inherit;
+}
+#footer-copyright-social{
+    background-color: #151515;
+    color: #303030;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    font-weight: 700;
+}
+#footer-copyright-social a{
+    color: #303030;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+@media (max-width: 1199px) {
+    .custom-navbar .navbar-nav li a.nav-link{
+        padding: 6px;
+    }
+    .custom-btn ,.custom-form-control{
+        padding: 6px 10px 7px;
+    }
+   
+ }
+
+
+@media (max-width: 991px) { 
+    .navbar-header{
+        width: 100%;
+        display: block;
+        margin-bottom: 22px;
+    }
+    .custom-navbar {
+        padding: 15px 20px 30px;
+    }
+    .custom-navbar .container{
+        max-width: 100%;
+    }
+    .navbar-header button.btn-icon , .navbar-header a.btn-icon{
+        float: left;
+        padding: 5px 10px 4px;
+        color: #777;
+        border: 1px solid #ddd;
+        background-color: transparent;
+        border-radius: 2px;
+        margin-left: 10px;
+        margin-right: 15px;
+        font-size: 18px;
+    }
+    .custom-navbar .navbar-nav li a.nav-link{
+        padding: 10px 15px;
+    }
+    .navbar-collapse{
+        border-top:1px solid #eee ;
+        margin-top: 15px;
+        padding-top: 8px;
+    }
+    .form-inline{
+        width: 100%;
+        border-top: 1px solid #eee;
+        border-bottom: 1px solid #eee;
+        padding: 10px 0;
+    }
+    .form-inline .dropdown{
+        display: none;
+    }
+    .form-inline  .custom-form-control{
+        width: 90%;
+    }
+    .form-inline .search-btn{
+        width: 10%;
+    }
+    #carousel-featured .carousel-indicators{
+        margin-right: 1%;
+
+    }
+    .overlay{
+        display: none;
+    }
+
+    .custom-thumbnail .add-to-card-btn{
+        background-color: #fff;
+        color:#868686;
+        font-weight: normal;
+    }
+    .custom-thumbnail  img{
+        height: 200px;
+    }
+    #social-icon{
+        margin-top: 10px;
+        font-size: 150%;
+    }
+    #copyright,#social-icon{
+        width: 100%;
+        text-align: center;
+    }
+ }
+ @media (max-width: 991px) and (min-width: 768px){
+    .custom-thumbnail  img{
+        height: 200px;
+    }
+ }
+@media (max-width: 767px) { 
+    #carousel-featured,#carousel-featured .product-details{
+        height: auto;
+    }
+    #carousel-featured .product-details{
+        position: static;
+        text-align: center;
+    }
+    #carousel-featured {
+        padding-bottom: 25px;
+    }
+    #carousel-featured .carousel-item img{
+        height: 250px;
+    }
+    #brand-logos img {
+        margin:5px 24px 5px 23px;
+        max-width: 50px;
+        max-height: 50px;
+    }
+    #footer-nav .footer-logo{
+        margin-bottom: 30px;
+    }
+    #footer-nav form{
+        width: 100%;
+        max-width: 100%;
+    }
+    #newsletter form .input-group{
+        width: 100%;
+    }
+}
+
+
+@media (max-width: 575px) {
+    .form-inline .search-btn{
+        width: 20%;
+    }
+    .form-inline  .custom-form-control{
+        width: 80%;
+    }
+    #carousel-featured .carousel-item{
+            padding: 0 18px;
+    }
+    #footer #brand-logos .img-container img{
+        margin: 5px 15px;
+    }
+  }
