--- a/src/css/style.css
+++ b/src/css/style.css
@@ -753,6 +753,30 @@ padding-bottom: 15px;
     border-bottom: none;
     font-size: 150%;
 }
+/**********************************************
+  **********************
+  payment page
+  ***********************
+  ***********************************************/
+.custom-input-details{
+    border-radius: 3px;
+    border-width: 2px;
+    height: 46px !important;
+    padding: 0 16px;
+    font-size: 18px;
+    width: 97%;
+}
+.custom-input-details:focus{
+    border-color: #b86d07;
+    box-shadow: 0 0 1px #b86d07
+}
+#credit-card-info{
+    margin-right: 3%;
+}
+input[type=number]{
+    direction: rtl;
+    text-align: right;
+}
 
 /**********************************************
   **********************
@@ -917,4 +941,5 @@ padding-bottom: 15px;
         padding-left: 15px;
 
     }
+    
 }
