--- a/src/css/style.css
+++ b/src/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: "JF Flat Regular", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: "JF Flat Regular", 'Lato','Segoe UI', Tahoma, Geneva, Verdana, sans-serif,-apple-system, Helvetica,-system-ui,ui-sans-serif;
     font-size: 14px;
     color: #555555;
     line-height: 1.429;
@@ -647,7 +647,7 @@ ol.custom-breadcrumb>li+li::before {
     margin-bottom: 10px;
     padding:5px 10px;
 }
-.heading-with-border-botttom{
+.heading-with-border-bottom{
 border-bottom: 2px solid #ebebee;
 padding-bottom: 15px;
 }
@@ -777,7 +777,86 @@ input[type=number]{
     direction: rtl;
     text-align: right;
 }
+/**********************************************
+  **********************
+  search ppage
+  ***********************
+  ***********************************************/
+#form-search-advance{
+    border: 1px solid #ebebeb;
+    padding-bottom: 20px;
+    display: table;
+}
+#form-search-advance .custom-panel{
+    border: none;
+    padding: 5px;
+}
+.custom-panel .card-header{
+    background-color: transparent;
+    margin-bottom: 15px;
+    padding: 7px 10px 13px;
+}
+.custom-list-group>.list-group-item{
+    border: none;
+    padding: 0 10px 14px 0;
 
+}
+.custom-list-group>.list-group-item:last-child{
+    padding: 0 10px 0 0;
+}
+#form-search-advance label{
+    font-weight: bold;
+    cursor: pointer;
+    color: black;
+    
+}
+.ui-slider{
+    margin: 25px 0 15px;
+    height: 2px !important;
+}
+.ui-slider .ui-slider-handle {
+    background-color: #f8ad47 !important;
+    border: none !important;
+    border-radius: 50%;
+    width: 12px !important;
+    height: 12px !important;
+    top: -6px !important;
+}
+.ui-slider .ui-slider-range{
+    border: 1px solid #f8ad47 !important;
+    
+}
+.custom-pagination li a
+{
+    border: 1px solid #ebebeb;
+    width: 32px;
+    height: 32px;
+    line-height: 32px;
+    margin-left: 3px;
+    margin-right: 3px;
+    color: #c2c2c2;
+    transition: all .3s ease;
+    display: inline-block;
+    text-align: center;
+}
+.custom-pagination li  a.active{
+    background-color: #f8ad47;
+    color: #fff;
+    border-color: #f8ad47;
+}
+.custom-pagination li  a:active,
+.custom-pagination li  a:hover,
+.custom-pagination li  a:focus{
+    color: #ab7731;
+    border-color: #ab7731;
+}
+#search-result .custom-thumbnail {
+    margin-right: -8px;
+    margin-left: -8px;
+}
+.custom-pagination {
+    margin: 25px 0;
+}
 /**********************************************
   **********************
   media
@@ -880,6 +959,11 @@ input[type=number]{
     }
     .custom-table th,.custom-table td{
         padding: 11px;
+    }
+    .ui-slider .ui-slider-handle {
+        width: 20px !important;
+        height: 20px !important;
+        top: -10px !important;
     }
 }
 
